
[workspace]
resolver = "2"
members = [
    "servicefilter-core",
    "servicefilter-filter",
    "servicefilter-load",
    "servicefilter-main",
    "servicefilter-protocol/servicefilter-protocol-grpc",
    "servicefilter-lib/servicefilter-lib-redis",
    ]


[workspace.dependencies]
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = "1"
tokio-stream = "0.1"

http = "0.2"
hyper = "0.14.26"
tonic = "0.10"
tower = "0.4"

prost = "0.12"
prost-types = "0.12"
