[package]
name = "servicefilter_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = {workspace = true}
anyhow="1.0.56"

http = {workspace = true}
tower = {workspace = true}
tonic = {workspace = true}