[package]
name = "servicefilter_filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
async-trait = "0.1"

tokio = { version = "1.32.0", features = ["full"] }

prost = "0.12"
prost-types = "0.12"
tonic = "0.10"
hyper = "0.14"
tower = "0.4"
http = "0.2"

serde = {version = "1", features = ["derive"]}
serde_yaml = "0.9"


[dependencies.servicefilter_core]
path="../servicefilter-core"

[build-dependencies]
tonic-build = { version = "0.10", features = ["prost"] }