[package]
name = "servicefilter_filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = {workspace = true}
async-trait = {workspace = true}
tokio = { workspace = true, features = ["full"] }

prost = {workspace = true}
prost-types = {workspace = true}
hyper = {workspace = true}
http = {workspace = true}
tower = {workspace = true}
tonic = {workspace = true}

serde = {version = "1", features = ["derive"]}
serde_yaml = "0.9"

[dependencies.servicefilter_core]
path="../servicefilter-core"

[build-dependencies]
tonic-build = { version = "0.10", features = ["prost"] }