[package]
name = "servicefilter_load"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
async-trait = "0.1"

libloading = "0.8"

tokio = { version = "1.32.0", features = ["full"] }

[dependencies.servicefilter_core]
path="../servicefilter-core"

[dependencies.servicefilter_filter]
path="../servicefilter-filter"

[dependencies.servicefilter_protocol_grpc]
path="../servicefilter-protocol/servicefilter-protocol-grpc"