[package]
name = "servicefilter_load"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = {workspace = true}
async-trait = {workspace = true}
tokio = { workspace = true, features = ["full"] }

libloading = "0.8"

[dependencies.servicefilter_core]
path="../servicefilter-core"

[dependencies.servicefilter_filter]
path="../servicefilter-filter"

[dependencies.servicefilter_protocol_grpc]
path="../servicefilter-protocol/servicefilter-protocol-grpc"