[package]
name = "servicefilter_main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "servicefilter"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1"

thiserror = "1.0.30"

structopt = "0.3.26"

serde = {version = "1", features = ["derive"]}
serde_yaml = "0.9"

prost = "0.12"
prost-types = "0.12"
tonic = "0.10"
hyper = "0.14"
tower = "0.4"
http = "0.2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.servicefilter_core]
path="../servicefilter-core"

[dependencies.servicefilter_filter]
path="../servicefilter-filter"

[dependencies.servicefilter_load]
path="../servicefilter-load"

[build-dependencies]
tonic-build = { version = "0.10", features = ["prost"] }
