[package]
name = "servicefilter_main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "servicefilter"
path = "src/main.rs"

[dependencies]
tracing = {workspace = true}
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { workspace = true, features = ["full"] }
tokio-stream = {workspace = true}

prost = {workspace = true}
prost-types = {workspace = true}
hyper = {workspace = true}
http = {workspace = true}
tower = {workspace = true}
tonic = {workspace = true}

thiserror = "1.0.30"

structopt = "0.3.26"

serde = {version = "1", features = ["derive"]}
serde_yaml = "0.9"

[dependencies.servicefilter_core]
path="../servicefilter-core"

[dependencies.servicefilter_filter]
path="../servicefilter-filter"

[dependencies.servicefilter_load]
path="../servicefilter-load"

[build-dependencies]
tonic-build = { version = "0.10", features = ["prost"] }
