[package]
name = "servicefilter_lib_mock_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
tracing = {workspace = true}
async-trait = {workspace = true}
async-ffi = "0.5"
tokio = { workspace = true, features = ["full"] }
tokio-stream = {workspace = true}
futures = "0.3"
futures-util = "0.3"

prost = {workspace = true}
prost-types = {workspace = true}
hyper = {workspace = true}
http = {workspace = true}
tonic = {workspace = true}

http-body = "0.4.4"
axum = "0.6.9"

[dependencies.servicefilter_core]
path="../../servicefilter-core"

[build-dependencies]
tonic-build = { version = "0.10", features = ["prost"] }