[package]
name = "servicefilter_lib_redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
redis = { version = "0.24.0", features = ["tokio-comp"] }

prost = "0.12"
prost-types = "0.12"
tonic = "0.10"

tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1"

tracing = "0.1"
async-trait = "0.1"

[dependencies.servicefilter_core]
path="../../servicefilter-core"

[build-dependencies]
tonic-build = { version = "0.10", features = ["prost"] }