[package]
name = "servicefilter_lib_redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
tracing = {workspace = true}
async-trait = {workspace = true}
async-ffi = "0.5"
tokio = { workspace = true, features = ["full"] }
tokio-stream = {workspace = true}

prost = {workspace = true}
prost-types = {workspace = true}
tonic = {workspace = true}

redis = { version = "0.24.0", features = ["tokio-comp"] }

[dependencies.servicefilter_core]
path="../../servicefilter-core"

[build-dependencies]
tonic-build = { version = "0.10", features = ["prost"] }