[package]
name = "servicefilter_protocol_grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.10"
tower = "0.4"
tokio = { version = "1.32.0", features = ["full"] }
http = "0.2"
hyper = "0.14.26"

futures = "0.3"

tracing = "0.1"

[dependencies.servicefilter_core]
path="../../servicefilter-core"