[package]
name = "servicefilter_protocol_grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = {workspace = true}
tokio = { workspace = true, features = ["full"] }

hyper = {workspace = true}
http = {workspace = true}
tower = {workspace = true}
tonic = {workspace = true}

futures = "0.3"

[dependencies.servicefilter_core]
path="../../servicefilter-core"